--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "add": "^2.0.6",
     "firebase": "^9.10.0",
-    "firebase-admin": "^11.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
